Initial responsive CSS

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,18 @@
 	--accent2-dark: #747FD3;
 	--bg: #F1F1F8;
 	--bg-light: #FFFFFF;
+
+	/* Margins */
+	--margin-outside: 1rem;
+	--margin-bottom: 3rem;
+
+	@media screen and (min-width: 850px) {
+		--margin-outside: 4rem;
+		--margin-bottom: 6rem;
+	}
+
+	/* Max-Width */
+	--max-width: 80rem;
 }
 
 
@@ -27,14 +39,34 @@ body {
 	font-weight: bold;
 }
 
+/* Font Sizes */
+html {
+	@media screen and (min-width: 1100px) {
+		font-size: 1.1rem;
+	}
+	@media screen and (min-width: 1200px) {
+		font-size: 1.2rem;
+	}
+}
 
 /* Header */
 .site-header {
 	position: relative;
 	margin-top: 1rem;
-	margin-left: 1rem;
-	margin-right: 1rem;
-	margin-bottom: 3rem;
+	margin-left: var(--margin-outside);
+	margin-right: var(--margin-outside);
+	margin-bottom: var(--margin-bottom);
+
+	@media screen and (min-width: 850px) {
+		display: grid;
+		grid-template-columns: 1fr auto;
+		margin-top: 3rem;
+		max-width: var(--max-width);
+		margin-left: auto;
+		margin-right: auto;
+		padding-left: var(--margin-outside);
+		padding-right: var(--margin-outside);
+	}
 }
 .site-logo {
 	font-size: 1.875rem;
@@ -42,8 +74,16 @@ body {
 }
 .site-nav {
 	margin-top: 2rem;
+
+	@media screen and (min-width: 850px) {
+		margin-top: 0;	
+	}
 }
 .site-nav__links {
+
+	@media screen and (min-width: 850px) {
+		display: flex;
+	}
 
 	li {
 		margin-bottom: .5rem;
@@ -56,6 +96,22 @@ body {
 		border-radius: .5rem;
 		padding: .5rem;
 		text-align: center;
+
+		@media screen and (min-width: 850px) {
+			border-radius: 0;
+			padding-left: 1rem;
+			padding-right: 1rem;
+			border-right-width: 0;
+		}
+	}
+	li:first-child a{
+		border-top-left-radius: .5rem;
+		border-bottom-left-radius: .5rem;
+	}
+	li:last-child a{
+		border-top-right-radius: .5rem;
+		border-bottom-right-radius: .5rem;
+		border-right-width: 1px;
 	}
 	.active {
 		background-color: var(--accent1);
@@ -70,17 +126,40 @@ body {
 	border-radius: .5rem;
 	padding: .75rem;
 
+	@media screen and (min-width: 850px) {
+		display: none;
+	}
+
 	svg {
 		display: block;
 	}
 }
 
+/* Wrapper */
+.wrapper {
+	@media screen and (min-width: 850px) {
+		max-width: var(--max-width);
+		margin-left: auto;
+		margin-right: auto;
+	}
+}
 
 /* Hero */
 .hero {
 	background: linear-gradient(-45deg, var(--accent2) 0%, var(--accent2-dark) 100%);
 	padding: 1rem 1rem 0;
-	margin-bottom: 3rem;
+	margin-bottom: var(--margin-bottom);
+
+	@media screen and (min-width: 850px) {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		align-items: center;
+		margin-left: var(--margin-outside);
+		margin-right: var(--margin-outside);
+		border-radius: 1rem;
+		padding-top: 2.5rem;
+	}
+
 }
 .hero__header {
 	font-size: 3rem;
@@ -90,6 +169,12 @@ body {
 	line-height: 1;
 	letter-spacing: -0.09rem;
 
+	@media screen and (min-width: 850px) {
+		order: 100;
+		font-size: 5rem;
+		text-align: left;
+	}
+
 	em {
 		font-style: normal;
 		color: var(--bg);
@@ -98,30 +183,49 @@ body {
 .hero__image {
 	display: block;
 	width: 100%;
+	max-width: 25rem;
+	margin-left: auto;
+	margin-right: auto;
+
+	@media screen and (min-width: 850px) {
+		margin: 0;
+		justify-self: right;
+	}
 }
 
 
 /* Quote */
 .quote {
-	margin-left: 1rem;
-	margin-right: 1rem;
-	margin-bottom: 3rem;
+	margin-left: var(--margin-outside);
+	margin-right: var(--margin-outside);
+	margin-bottom: var(--margin-bottom);
 	text-align: center;	
 }
 .quote__text {
 	font-size: 1.5rem;
+
+	@media screen and (min-width: 850px) {
+		font-size: 1.75rem;
+		max-width: 40ch;
+		margin-left: auto;
+		margin-right: auto;
+	}
 }
 .quote__attribution {
 	margin-top: .5rem;
 	font-size: 1.25rem;
+
+	@media screen and (min-width: 850px) {
+		font-size: 1.5rem;
+	}
 }
 
 
 /* Cards */
 .cards {
-	margin-left: 1rem;
-	margin-right: 1rem;
-	margin-bottom: 3rem;
+	margin-left: var(--margin-outside);
+	margin-right: var(--margin-outside);
+	margin-bottom: var(--margin-bottom);
 }
 .cards__header {
 	font-size: 1.5rem;
@@ -134,6 +238,11 @@ body {
 .cards__wrapper {
 	display: grid;
 	gap: 2rem;
+
+	@media screen and (min-width: 850px) {
+		grid-template-columns: repeat(3, 1fr);
+		gap: 3rem;
+	}
 }
 .card {
 	background-color: var(--bg-light);
@@ -174,9 +283,9 @@ body {
 
 /* Mailing List */
 .mailing-list {
-	margin-left: 1rem;
-	margin-right: 1rem;
-	margin-bottom: 3rem;
+	margin-left: var(--margin-outside);
+	margin-right: var(--margin-outside);
+	margin-bottom: var(--margin-bottom);
 	text-align: center;
 }
 
@@ -187,6 +296,12 @@ body {
 	color: var(--bg);
 	
 	p {
-		padding: 3rem 1rem;
+		padding: 3rem var(--margin-outside);
+
+		@media screen and (min-width: 850px) {
+			max-width: var(--max-width);
+			margin-left: auto;
+			margin-right: auto;
+		}
 	}
 }
